--- a/thesis/rlfs.tex
+++ b/thesis/rlfs.tex
@@ -133,7 +133,7 @@ on examples of host galaxies and non-host galaxies drawn from a
 cross-identification catalogue, for which we use RGZ. Other related
 algorithms developed to automatically cross-identify radio objects
 include Bayesian methods \citep{fan15}, likelihood ratio \citep{weston18lrpy},
- positional matching \citep[e.g.][]{kimball08, norris06, middelberg08}, and positional/image hybrid approaches \citep{vanvelzen12radio}, but these methods do not make use of existing
+ positional matching \citep[e.g.][]{kimball08, norris06, middelberg08}, and positional/image hybrid approaches \citep{van_velzen_radio_2012}, but these methods do not make use of existing
 cross-identification catalogues and most assume compact radio sources or that the projected radio emission overlaps the host galaxy.
 
 \begin{table}
